# ChangeLog for x11-libs/libwnck
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.215 2009/04/27 13:29:04 jer Exp $

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> libwnck-2.24.2:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> libwnck-2.24.2.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> libwnck-2.24.2.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> libwnck-2.24.2.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> libwnck-2.24.2.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> libwnck-2.24.2.ebuild:
  Marking libwnck-2.24.2 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> libwnck-2.24.2.ebuild:
  Marking libwnck-2.24.2 ppc64 stable for bug 260063

*libwnck-2.24.2 (27 Nov 2008)

  27 Nov 2008; Mart Raudsepp <leio@gentoo.org> -libwnck-2.24.1.ebuild,
  +libwnck-2.24.2.ebuild:
  Version bump for translation updates

  13 Nov 2008; Brent Baude <ranger@gentoo.org> libwnck-2.22.3.ebuild:
  Marking libwnck-2.22.3 ppc64 stable for bug 236971

*libwnck-2.24.1 (22 Oct 2008)

  22 Oct 2008; Mart Raudsepp <leio@gentoo.org> -libwnck-2.24.0.ebuild,
  +libwnck-2.24.1.ebuild:
  Version bump. Translation updates.

*libwnck-2.24.0 (06 Oct 2008)

  06 Oct 2008; Mart Raudsepp <leio@gentoo.org> +libwnck-2.24.0.ebuild:
  New version - tweaks default window icon a bit; translation updates

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> libwnck-2.22.3.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> libwnck-2.22.3.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> libwnck-2.22.3.ebuild:
  x86 stable, bug #229709

  03 Aug 2008; Mart Raudsepp <leio@gentoo.org> -libwnck-2.22.1.ebuild:
  Remove old
