@@ -1,8 +1,8 @@
 DIST libwnck-2.20.3.tar.bz2 637507 RMD160 d7b198f5194ff442d2840cc05a73d23b3d819df2 SHA1 21a710e5ac221b73ce40616867ac2fba3a105647 SHA256 d5fc1d8b0202ad169052dcd50b283ed4fb30a4a7da9bbf0be462d2879535dd6a
-DIST libwnck-2.22.3.tar.bz2 687875 RMD160 cd5c6d689fa0accbea47a193a4cc6e7c548bb10a SHA1 57d97639287dee0d62492418b10cd2ad5b17f5b3 SHA256 b013fb5f702b4e182399ffb714451307822cad2ba310e0e7565761319f33d436
 DIST libwnck-2.24.2.tar.bz2 693227 RMD160 47f8c3c7eaf3d0c4dccce32f8504022a228c582e SHA1 5293b1667bd1bc3f66eac2aa35f5ff0b34eed893 SHA256 35c12f983e64c88c37c261eb6b55b7c59a5ef4dbb04525162f0753ea8e9127f2
-EBUILD libwnck-2.20.3.ebuild 710 RMD160 7828f2bdbc5df7840aae929ffb8fa27ee823ee54 SHA1 1f9c5439b281892a20af7c1e36b7cf19e8cc3994 SHA256 a84950d180264bd8afd2a8cca4d45c91655d5475b8e05f29c48c5d59e6a0629f
-EBUILD libwnck-2.22.3.ebuild 872 RMD160 8149aec32cb93e8de3d446a88f1a8b0762789080 SHA1 11e7a42fc355fe19b2947b16689785c54ddf4cca SHA256 39e3ba19b99daf27e19ddf3d3de5a0ed8dd612492125154be2a884e0a9f2f26f
+DIST libwnck-2.26.1.tar.bz2 711253 RMD160 65672b78ec18ab7e3ac7726a9d261eb368cf4b50 SHA1 d1bda681b20a2a832de1cc57dda7524f97e8103f SHA256 53737b2bcc520d16d4a83517e2ec6ee52269cec2706a9b4cdb876615c525f430
+EBUILD libwnck-2.20.3.ebuild 707 RMD160 825dba603bfe4adce1fba34eda916d0fc898f6de SHA1 c7b7b290cd1fd8759d7eced8444fd2d34e098259 SHA256 176f43623ff6325d16f34d05e42c2a3fad22b6d1deb8580d2d78c17a341b02dd
 EBUILD libwnck-2.24.2.ebuild 882 RMD160 d9420c2610b73f662ad5a84b73256c40c3981208 SHA1 832909ae060b538b93ec47c7efdd546cc3190922 SHA256 32047228e82a595396e3443ef5d186d5d2afbe326f934cdef1c5b399e0e343e5
-MISC ChangeLog 25300 RMD160 1c1547fa8934a96a63d989165556e7c6560a3227 SHA1 7fe11018834c368ce05ae587d59051ea6553373e SHA256 69368b48f85c35029c9fe227baffc3802dc298253feb4d94df08627bcb21e6a9
+EBUILD libwnck-2.26.1.ebuild 868 RMD160 ec9cfdfc4c78a0c092eb3d583ffb6bd146a2cf93 SHA1 bd5ec171c8e5a75d01077c9651851648c5b72b64 SHA256 d0ff5a52ac78feb863749a4f2c2b24bf2e6160bd21a86cba1507f83a525f4fe0
+MISC ChangeLog 25549 RMD160 0bfbe22fd9f2c02b7e584835db6b476e5ab158b9 SHA1 6ae111d343ade9e7964c9a8382f71a7d4445c705 SHA256 0bea4f79d0fa4aa91ca2250080bf12bee686f14e940243d3e30f28901c7d3101
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
