@@ -1,6 +1,13 @@
 # ChangeLog for x11-libs/libwnck
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.215 2009/04/27 13:29:04 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.216 2009/05/04 22:35:25 eva Exp $
+
+*libwnck-2.26.1 (04 May 2009)
+
+  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org> libwnck-2.20.3.ebuild,
+  -libwnck-2.22.3.ebuild, +libwnck-2.26.1.ebuild:
+  New version for GNOME 2.26. Build fixes and translation updates. Clean old
+  revisions.
 
   27 Apr 2009; Jeroen Roovers <jer@gentoo.org> libwnck-2.24.2:
   Stable for HPPA (bug #260063).
